--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #414040;
+  background-color: #f2f5f9;
 }
 
 .app-container {
