--- a/src/components/Input/index.css
+++ b/src/components/Input/index.css
@@ -3,7 +3,7 @@ input {
   max-width: 100%;
   height: 100%;
   border: none;
-  background-color: #f2f5f9;
+  background-color: #fff;
   color: #505050;
   font-size: 1em;
   font-weight: 500;
