--- a/src/pages/Dashboard/index.css
+++ b/src/pages/Dashboard/index.css
@@ -15,6 +15,7 @@
   border-radius: 1rem;
   min-width: 350px;
   cursor: pointer;
+  margin: 0 1em;
 }
 
 .chats-list > .item {
@@ -24,6 +25,11 @@
   border-radius: 1rem;
   text-decoration: none;
 }
+
+.chats-list > .item.active {
+  background-color: #dae9ff;
+}
+
 .chats-list > .item:hover {
   background-color: #f1f1f1;
 }
@@ -73,4 +79,5 @@
   box-shadow: 0 0 1em 0.2em rgba(0, 0, 0, 0.1);
   border-radius: 1rem;
   min-width: 350px;
+  margin: 0 1em;
 }
