--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -1,6 +1,14 @@
 .navbar {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem 1.5rem;
+  width: 100%;
+}
+
+@media (max-width: 480px) {
+  .navbar {
+    flex-direction: column;
+  }
 }
