--- a/src/containers/Chat/index.css
+++ b/src/containers/Chat/index.css
@@ -1,9 +1,31 @@
+.chats-messages {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 70%;
+  height: 100%;
+  background-color: #fafafa;
+  box-shadow: 0 0 1em 0.2em rgba(0, 0, 0, 0.1);
+  border-radius: 1rem;
+  min-width: 350px;
+  margin: 0 1em;
+}
+
+.chats-messages .delete-btn {
+  background-color: #ff7373;
+}
+
+.chats-messages .back-btn {
+  background-color: #fafafa;
+  box-shadow: 0 0 0 0 #fafafa;
+  color: #505050;
+}
 .chat {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -77,4 +99,13 @@
 
 .input-container > input {
   width: 90%;
+}
+
+@media (max-width: 480px) {
+  .chats-messages {
+    min-width: unset;
+    width: 100%;
+    margin: 1em;
+    box-sizing: border-box;
+  }
 }
